--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -1,18 +1,18 @@
 <html lang="en">
 <head>
   <title>First music21j demo</title>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-  <script src="../build/music21.debug.js"></script>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../css/m21.css">
+  <script type="module" src="./m21-dev.ts"></script>
 </head>
 <body>
 
-This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.<br/>
+This was the oldest/first experiment with music21j, from summer 2013.  Updated so it still works.<br>
 Only for historical nostalgia...
 <form action="" onsubmit="return false;">
-<input type="button" onclick="playNote(60)" value="clickMe" />
-<input type="button" onclick="refreshMe()" value="playSeventy" /><br />
-<label for="textId">Note/QL</label><input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
+<input type="button" onclick="playNote(60)" value="clickMe">
+<input type="button" onclick="refreshMe()" value="playSeventy"><br>
+<label for="textId">Note/QL</label><input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()">
 </form>
 
 <script>
@@ -40,10 +40,10 @@ function refreshMe() {
 }
 
 function drawMe() {
-	const myNote = new music21.note.Rest(4.0);
+    const myNote = new music21.note.Rest(4.0);
     const myStream = new music21.stream.Stream();
     myStream.append(myNote);
-	myStream.appendNewDOM();
+    myStream.appendNewDOM();
 }
 
 function renderIt() {
@@ -60,7 +60,10 @@ function renderIt() {
     newStream.replaceDOM();
 }
 
-drawMe();
+document.addEventListener('DOMContentLoaded', () => {
+    drawMe();
+});
+
 </script>
 
 </body>
