--- a/testHTML/keyboard.html
+++ b/testHTML/keyboard.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Piano Keyboard!</title>
     <link rel="stylesheet" href="../css/m21.css">
-    <script src="../build/music21.debug.js"></script>
+    <script type="module" src="./m21-dev.ts"></script>
 </head>
 <body>
     <h1>A keyboard that can be clicked on.</h1>
@@ -25,6 +25,7 @@
     </div>
 
     <script>
+    function main() {
         const kd = document.getElementById('keyboardDiv');
 
         const k = new music21.keyboard.Keyboard();
@@ -47,6 +48,10 @@
                 }
             });
         });
+    }
+    document.addEventListener('DOMContentLoaded', () => {
+        main();
+    });
 
     </script>
 </body>
