--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -1,46 +1,51 @@
 <html lang="en">
 <head>
    <title>Pickle Test</title>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+   <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/m21.css">
 </head>
 <body>
 <h1>A test of pickling and unpickling with jsonpickleJS</h1>
-<div>Not currently working in 2019 December</div>
-<script src="../build/music21.debug.js" type="application/javascript"></script>
-<script type="text/javascript">
- fromPython = music21.fromPython;
- jsonpickle = fromPython.jsonpickle;
- tags = jsonpickle.tags;
+<div>Not currently working in 2019 December (or 2025 December)</div>
+<script type="module" src="./m21-dev.ts"></script>
+<script>
+function main() {
+    fromPython = music21.fromPython;
+    jsonpickle = fromPython.jsonpickle;
+    tags = jsonpickle.tags;
 
- Thing = function (x) {
-     this.x = x;
-     this[tags.PY_CLASS] = '__main__.Thing';
-     this.subThing = undefined;
- };
+    Thing = function (x) {
+        this.x = x;
+        this[tags.PY_CLASS] = '__main__.Thing';
+        this.subThing = undefined;
+    };
 
- t = new Thing(5);
- st = new Thing('hello');
- st.subThing = t;
- t.subThing = st;
- t.subThing2 = st;
- m21Note = new music21.note.Note('C#5');
- m21Note[tags.PY_CLASS] = 'music21.note.Note';
- d = m21Note.duration;
- d[tags.PY_CLASS] = 'music21.duration.Duration';
- b = m21Note.beams;
- b[tags.PY_CLASS] = 'music21.beam.Beams';
- p = m21Note.pitch;
- p.accidental[tags.PY_CLASS] = 'music21.pitch.Accidental';
- p[tags.PY_CLASS] = 'music21.pitch.Pitch';
- o = jsonpickle.encode(m21Note);
- console.log(o);
- console.log('-------');
- nOut = jsonpickle.decode(o);
- console.log(nOut);
- s = new music21.stream.Stream();
- s.append(nOut);
- s.appendNewDOM();
+    t = new Thing(5);
+    st = new Thing('hello');
+    st.subThing = t;
+    t.subThing = st;
+    t.subThing2 = st;
+    m21Note = new music21.note.Note('C#5');
+    m21Note[tags.PY_CLASS] = 'music21.note.Note';
+    d = m21Note.duration;
+    d[tags.PY_CLASS] = 'music21.duration.Duration';
+    b = m21Note.beams;
+    b[tags.PY_CLASS] = 'music21.beam.Beams';
+    p = m21Note.pitch;
+    p.accidental[tags.PY_CLASS] = 'music21.pitch.Accidental';
+    p[tags.PY_CLASS] = 'music21.pitch.Pitch';
+    o = jsonpickle.encode(m21Note);
+    console.log(o);
+    console.log('-------');
+    nOut = jsonpickle.decode(o);
+    console.log(nOut);
+    s = new music21.stream.Stream();
+    s.append(nOut);
+    s.appendNewDOM();
+}
+document.addEventListener('DOMContentLoaded', () => {
+    main();
+});
 </script>
 </body>
 </html>
