--- a/testHTML/sfElsewhereCDN.html
+++ b/testHTML/sfElsewhereCDN.html
@@ -2,17 +2,25 @@
 <!--suppress JSConstantReassignment -->
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Embed Soundfonts from elsewhere</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
 </head>
 <body>
 <h1>Embed Soundfonts from elsewhere</h1>
 <p>This script (view source) shows how music21 can be embedded (like in a Fiddle) and
     load soundfonts from elsewhere.
+
+    Note that it uses whatever the latest release of music21j is on cdn.jsdelivr.net
+    not whatever you are developing.
 </p>
 <button role="button" class="btn btn-primary" onclick="playStream()">Click me!</button>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 <script>
     window.m21conf = { loadSoundfont: false };
 </script>
